--- a/YoseTheGame.StartRole/packages.config
+++ b/YoseTheGame.StartRole/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="2.2.0.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net451" />
+  <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Diagnostics" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.HttpListener" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net451" />
-  <package id="NUnit" version="2.6.3" targetFramework="net451" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.1.0" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="System.Spatial" version="5.2.0" targetFramework="net451" />
+  <package id="WindowsAzure.Storage" version="2.1.0.0" targetFramework="net451" />
 </packages>
