--- a/src/YoseTheGame.ServerRole/packages.config
+++ b/src/YoseTheGame.ServerRole/packages.config
@@ -8,7 +8,11 @@
   <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.1.0" targetFramework="net451" />
+  <package id="Nancy" version="0.22.2" targetFramework="net451" />
+  <package id="Nancy.Owin" version="0.22.2" targetFramework="net451" />
+  <package id="Nancy.Viewengines.Razor" version="0.22.2" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net451" />
+  <package id="System.Web.Razor.Unofficial" version="2.0.2" targetFramework="net451" />
   <package id="WindowsAzure.Storage" version="2.1.0.0" targetFramework="net451" />
 </packages>
