--- a/tests/YoseTheGame.Tests/packages.config
+++ b/tests/YoseTheGame.Tests/packages.config
@@ -6,7 +6,11 @@
   <package id="Microsoft.Owin.Host.HttpListener" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net451" />
+  <package id="Nancy" version="0.22.2" targetFramework="net451" />
+  <package id="Nancy.Owin" version="0.22.2" targetFramework="net451" />
+  <package id="Nancy.Viewengines.Razor" version="0.22.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net451" />
   <package id="NUnit" version="2.6.3" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="System.Web.Razor.Unofficial" version="2.0.2" targetFramework="net451" />
 </packages>
