Big number guard

--- a/src/YoseTheGame.Server/YoseTheGame.Server.csproj
+++ b/src/YoseTheGame.Server/YoseTheGame.Server.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Model\PrimeFactors.cs" />
     <Compile Include="Model\Ping.cs" />
     <Compile Include="Modules\MainModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
