--- a/src/YoseTheGame.Server/packages.config
+++ b/src/YoseTheGame.Server/packages.config
@@ -3,6 +3,7 @@
   <package id="Nancy" version="0.22.2" targetFramework="net451" />
   <package id="Nancy.Owin" version="0.22.2" targetFramework="net451" />
   <package id="Nancy.Viewengines.Razor" version="0.22.2" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="System.Web.Razor.Unofficial" version="2.0.2" targetFramework="net451" />
 </packages>
