--- a/src/YoseTheGame.Server/YoseTheGame.Server.csproj
+++ b/src/YoseTheGame.Server/YoseTheGame.Server.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Model\PrimeFactors.cs" />
     <Compile Include="Model\Ping.cs" />
     <Compile Include="Modules\MainModule.cs" />
+    <Compile Include="Modules\PrimeFactorsModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -69,6 +70,9 @@
     <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Views\Main\Index.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Views\PrimeFactors\Index.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="web.config" />
